--- a/app/src/main/res/layout/fragment_jobs.xml
+++ b/app/src/main/res/layout/fragment_jobs.xml
@@ -8,7 +8,7 @@
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/listView_jobpost"
+        android:id="@+id/listView_jobs"
         android:divider="@drawable/divider"
         android:layout_margin="5dp" />
 </RelativeLayout>
