--- a/app/src/main/res/layout/new_event_xml.xml
+++ b/app/src/main/res/layout/new_event_xml.xml
@@ -56,7 +56,7 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:text="vnjlm"
-                    android:id="@+id/textView2"
+                    android:id="@+id/textView_companyName"
                     android:layout_centerVertical="true"
 
                     android:paddingLeft="10dp"
