--- a/app/src/main/res/layout/simple_list_item_job.xml
+++ b/app/src/main/res/layout/simple_list_item_job.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginBottom="5dp">
 
     <ImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:id="@+id/imageView_job_profile"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:id="@+id/imageView_logo"
         android:layout_alignParentTop="true"
         android:padding="5dp"
         android:layout_alignParentLeft="true"
@@ -19,24 +21,26 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Company Name"
-        android:textColor="@color/cardview_dark_background"
-        android:id="@+id/textView2"
+        android:textColor="@color/black_de"
+        android:id="@+id/textView_companyName"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/imageView_job_profile"
-        android:layout_toEndOf="@+id/imageView_job_profile"
+        android:layout_toRightOf="@+id/imageView_logo"
+        android:layout_toEndOf="@+id/imageView_logo"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="5dp"
         android:textSize="18dp" />
 
-    <ImageView
-        android:layout_width="16dp"
-        android:layout_height="16dp"
+    <com.mikepenz.iconics.view.IconicsImageView
+        android:layout_width="14dp"
+        android:layout_height="14dp"
+
         android:id="@+id/imageView4"
-        android:src="@drawable/location"
+        app:iiv_icon="faw-map-marker"
+        app:iiv_color="@color/black_de"
         android:layout_alignTop="@+id/textView_joblocation"
-        android:layout_alignLeft="@+id/textView2"
-        android:layout_alignStart="@+id/textView2"
-        android:layout_marginTop="2dp" />
+        android:layout_alignLeft="@+id/textView_companyName"
+        android:layout_alignStart="@+id/textView_companyName"
+        android:layout_marginTop="3dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -44,30 +48,30 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Pune"
         android:id="@+id/textView_joblocation"
-        android:layout_below="@+id/textView2"
+        android:layout_below="@+id/textView_companyName"
         android:layout_toRightOf="@+id/imageView4"
         android:layout_toEndOf="@+id/imageView4"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
         android:textSize="14dp" />
 
-    <ImageView
-        android:layout_width="16dp"
-        android:layout_height="16dp"
+    <com.mikepenz.iconics.view.IconicsImageView
+        android:layout_width="14dp"
+        android:layout_height="14dp"
         android:id="@+id/imageView5"
-        android:src="@drawable/work"
-        android:layout_alignTop="@+id/textView4"
-        android:layout_toLeftOf="@+id/textView_joblocation"
-        android:layout_toStartOf="@+id/textView_joblocation"
-        android:layout_marginTop="2dp" />
+        app:iiv_icon="faw-briefcase"
+        app:iiv_color="@color/black_de"
+        android:layout_alignTop="@+id/textView_jobPosition"
+        android:layout_alignLeft="@+id/imageView4"
+        android:layout_alignStart="@+id/imageView4" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Intern"
-        android:id="@+id/textView4"
-        android:layout_alignBottom="@+id/imageView_job_profile"
+        android:id="@+id/textView_jobPosition"
+        android:layout_alignBottom="@+id/imageView_logo"
         android:layout_alignLeft="@+id/textView_joblocation"
         android:layout_alignStart="@+id/textView_joblocation"
         android:layout_marginTop="5dp"
@@ -78,29 +82,29 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="End-Date"
-        android:id="@+id/textView5"
-        android:layout_alignBottom="@+id/imageView4"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/textView2"
-        android:textSize="14dp" />
+        android:id="@+id/textView_lastDate"
+        android:textSize="14dp"
+        android:layout_below="@+id/imageView4"
+        android:layout_alignRight="@+id/view14"
+        android:layout_alignEnd="@+id/view14" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Technical"
-        android:id="@+id/textView6"
-        android:layout_alignTop="@+id/imageView5"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:textSize="14dp" />
+        android:id="@+id/textView_jobType"
+        android:textSize="14dp"
+        android:layout_below="@+id/textView_companyName"
+        android:layout_alignRight="@+id/textView_lastDate"
+        android:layout_alignEnd="@+id/textView_lastDate"
+        android:text="Technical" />
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:layout_below="@id/imageView_job_profile"
+        android:layout_below="@id/imageView_logo"
         android:background="#9e9e9e"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="5dp"/>
+        android:layout_marginTop="5dp"
+        android:id="@+id/view14" />
 </RelativeLayout>
