--- a/app/src/main/res/layout/fragment_menu_bottom.xml
+++ b/app/src/main/res/layout/fragment_menu_bottom.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="40dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/card_background"
 
     android:weightSum="4">
     <LinearLayout
@@ -17,18 +16,18 @@
 
         <com.mikepenz.iconics.view.IconicsImageView
             android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:layout_marginTop="10dp"
+            android:layout_height="18dp"
+            android:layout_marginTop="11dp"
             android:id="@+id/button_home"
-            app:iiv_color="@android:color/black"
+            app:iiv_color="@color/appTheme"
             app:iiv_icon="faw-users" />
         <View
             android:layout_width="match_parent"
             android:layout_height="3dp"
             android:layout_marginTop="7dp"
-            android:background="#d60d0d"
+            android:background="@color/appTheme"
             android:id="@+id/view_home"
-            android:visibility="gone"
+
              />
 
     </LinearLayout>
@@ -41,8 +40,8 @@
 
         <com.mikepenz.iconics.view.IconicsImageView
             android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:layout_marginTop="10dp"
+            android:layout_height="18dp"
+            android:layout_marginTop="11dp"
             android:id="@+id/button_filter"
             app:iiv_color="@android:color/black"
             app:iiv_icon="faw-filter" />
@@ -50,7 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="3dp"
             android:layout_marginTop="7dp"
-            android:background="#d60d0d"
+            android:background="@color/appTheme"
             android:id="@+id/view_filter"
             android:visibility="gone"
             />
@@ -66,8 +65,8 @@
 
         <com.mikepenz.iconics.view.IconicsImageView
             android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:layout_marginTop="10dp"
+            android:layout_height="18dp"
+            android:layout_marginTop="11dp"
             android:id="@+id/button_jobs"
             app:iiv_color="@android:color/black"
             app:iiv_icon="faw-briefcase"/>
@@ -75,7 +74,7 @@
             android:layout_width="match_parent"
             android:layout_height="3dp"
             android:layout_marginTop="7dp"
-            android:background="#d60d0d"
+            android:background="@color/appTheme"
             android:visibility="gone"
             android:id="@+id/view_jobs"
             />
@@ -92,8 +91,8 @@
 
         <com.mikepenz.iconics.view.IconicsImageView
             android:layout_width="match_parent"
-            android:layout_height="10dp"
-            android:layout_marginTop="15dp"
+            android:layout_height="8dp"
+            android:layout_marginTop="16dp"
             android:id="@+id/button_settings"
             app:iiv_color="@android:color/black"
             app:iiv_icon="faw-ellipsis-h"/>
@@ -101,7 +100,7 @@
             android:layout_width="match_parent"
             android:layout_height="3dp"
             android:layout_marginTop="12dp"
-            android:background="#d60d0d"
+            android:background="@color/appTheme"
             android:visibility="gone"
             android:id="@+id/view_settings"
             />
