--- a/app/src/main/res/layout/list_layout_job.xml
+++ b/app/src/main/res/layout/list_layout_job.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_marginBottom="5dp">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="65dp"
         android:layout_height="65dp"
         android:id="@+id/imageView_logo"
@@ -101,9 +101,9 @@
         android:layout_width="match_parent"
         android:layout_height="1px"
         android:layout_below="@id/imageView_logo"
-        android:background="#9e9e9e"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:background="@color/grey"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:layout_marginTop="5dp"
         android:id="@+id/view14" />
 </RelativeLayout>
