--- a/app/src/main/res/layout/on_filter_click.xml
+++ b/app/src/main/res/layout/on_filter_click.xml
@@ -9,8 +9,6 @@
         android:id="@+id/lvExp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_above="@+id/include" />
-
+        android:layout_alignParentStart="true"/>
 
 </RelativeLayout>
