--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="cardview_dark_background">#FF4081</color>
-    <color name="grey">#b9b9b9</color>
+    <color name="grey">#9e9e9e</color>
     <color name="appTheme">#e53935</color>
 
     <color name="horizontal_line">#a6a6a6</color>
