--- a/app/src/main/res/layout/fragment_expandable_list.xml
+++ b/app/src/main/res/layout/fragment_expandable_list.xml
@@ -9,7 +9,8 @@
                 android:id="@+id/expandableListView"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"/>
+                android:layout_alignParentStart="true"
+                android:layout_above="@+id/button_filter" />
 
 
     <Button
@@ -19,5 +20,5 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/button" />
+        android:id="@+id/button_filter" />
 </RelativeLayout>
