--- a/app/src/main/res/layout/fragment_menu_bottom.xml
+++ b/app/src/main/res/layout/fragment_menu_bottom.xml
@@ -12,7 +12,7 @@
         android:layout_height="1dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:background="@color/grey"></LinearLayout>
+        android:background="@color/grey" />
 
     <LinearLayout
         android:layout_width="match_parent"
