--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp"
     tools:context=".activities.PostLogin.ActivityMember">
 
 
@@ -12,9 +13,6 @@
        android:layout_height="wrap_content"
        android:id="@+id/recycler_view"
        android:scrollbars="vertical"
-
-       >
-
-   </android.support.v7.widget.RecyclerView>
+       android:layout_marginBottom="-6dp"/>
 
 </RelativeLayout>
