--- a/app/src/main/res/layout/fragment_menu_bottom.xml
+++ b/app/src/main/res/layout/fragment_menu_bottom.xml
@@ -9,9 +9,9 @@
     >
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
+        android:layout_height="1px"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:background="@color/grey" />
 
     <LinearLayout
