--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -3,21 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
-    tools:context=".onClickMember">
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp"
+    tools:context=".activities.PostLogin.ActivityMember">
 
 
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@android:id/list"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="0dp"
-        android:fastScrollEnabled="true"
-        android:divider="@drawable/divider"
-        android:layout_marginRight="0dp"
-        android:layout_marginBottom="0dp" />
+   <android.support.v7.widget.RecyclerView
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:id="@+id/recycler_view"
+       android:scrollbars="vertical"
+       android:layout_marginBottom="-6dp"/>
 
 </RelativeLayout>
